# sensor_fusion

./: CMakeLists.txt  EkfModel.cpp  EkfModel.h  Types.h  UKF.cpp  UKF.h  main.cpp  plot.ipynb
vsss_esp_data/: back_and_forth.csv  byhand.csv  circular.csv  code.docx  spin.csv  still.csv  still2.csv
